# VIAM_Delivery_Robot

./: README.md
actuator/: CMakeLists.txt  package.xml  setup_USB_CAN.sh
actuator/include/: can_transmitter.h
actuator/scripts/: can_transceiver.py  test_actuator.py
actuator/src/: can_transmitter.cpp
controller/: CMakeLists.txt  package.xml
controller/include/: controller.h  pid.h
controller/src/: controller.cpp  pid.cpp
create_path_indoor/: CMakeLists.txt  package.xml
create_path_indoor/scripts/: create_path.py
delivery_robot_new_version/: CMakeLists.txt  package.xml
delivery_robot_new_version/launch/: display.launch  gazebo.launch
gcs_transceiver/: CMakeLists.txt  package.xml
gcs_transceiver/include/: command_protocol.h  gcs_transceiver.h  mission_protocol.h  msg_handler.h  parameter_protocol.h
gcs_transceiver/src/: command_protocol.cpp  gcs_transceiver.cpp  mission_protocol.cpp  parameter_protocol.cpp
guider/: CMakeLists.txt  package.xml
guider/include/: base_los.h  guider.h  straight_los.h
guider/src/: base_los.cpp  guider.cpp  straight_los.cpp
indoor_ws/cartographer_ros/cmake/: cartographer_rosConfig.cmake
indoor_ws/cartographer_ros/configuration_files/: navi.rviz
indoor_ws/cartographer_ros/launch/: demo_backpack_2d.launch  my_robot.launch  show_tf.launch
indoor_ws/cartographer_ros/urdf/: backpack_2d.urdf
navigator/: CMakeLists.txt  package.xml
navigator/include/: gps-ahrs_receiver.h
navigator/src/: gps-ahrs_receiver.cpp
params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
point_avoid/: CMakeLists.txt  package.xml
point_avoid/src/: point_avoid.cpp
scan_qrcode/: CMakeLists.txt  package.xml
scan_qrcode/scripts/: AdvancedQRBar.py
send_goal_indoor/: CMakeLists.txt  package.xml
send_goal_indoor/src/: send_goal_indoor.cpp
simulation/: CMakeLists.txt  package.xml  simulation_instruction.txt
simulation/launch/: amcl.launch  map_server.launch  simulation.launch  test_navi.launch  upload_agv.launch
simulation/scripts/: model_spawner.py  motor_commander.py
simulation/src/: ahrs_filter.cc  diff_motors_plugin.cc  gps_plugin.cc  imu_plugin.cc  magnet_plugin.cc  p3d_plugin.cc
simulation/world/: Map_BK.world  empty_ground.world  map.world  town.world  willowgarage.world  workspace.world  workspace_simulation.world
switch_mode_indoor/: CMakeLists.txt  package.xml
switch_mode_indoor/src/: switch_mode_indoor.cpp
test_detect_obstacle/: CMakeLists.txt  package.xml
test_detect_obstacle/src/: detect_obstacle.cpp
utils/: CMakeLists.txt  package.xml
utils/include/utils/: geo.h
utils/msg/: Complete.msg  DiffVel.msg  Encoder.msg  Error.msg  KeyboardCommand.msg  Odometry.msg  Position_avoid_obstacles.msg  Setpoint.msg  WaypointList.msg  distance_msgs.msg  goal_indoor.msg  heading_plot.msg  mode_indoor.msg  pointID.msg  string_of_qrcode.msg
utils/srv/: ParamGet.srv  ParamSet.srv
