<?xml version="1.0"?>
<package format="2">
  <name>actuator</name>
  <version>0.1.0</version>
  <description>The actuator package</description>
  <maintainer email="legopro@todo.todo">legopro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>utils</depend>
</package>
