<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.0.0</version>
  <description>The controller package</description>
  <maintainer email="legopro@todo.todo">legopro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>
  <depend>utils</depend>
  <depend>sensor_msgs </depend>
</package>
