<?xml version="1.0"?>
<package format="2">
  <name>gcs_transceiver</name>
  <version>0.0.0</version>
  <description>The gcs_transceiver package</description>
  <maintainer email="legopro@todo.todo">legopro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>mavconn</depend>
  <depend>utils</depend>
</package>
