<?xml version="1.0"?>
<package format="2">
  <name>simulation</name>
  <version>0.0.0</version>
  <description>The simulation package</description>
  <maintainer email="legopro@todo.todo">legopro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>message_filters</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>utils</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/world_model"
                gazebo_plugin_path="${prefix}/lib"/>
  </export>
</package>
