<?xml version="1.0"?>
<package format="2">
  <name>utils</name>
  <version>0.0.0</version>
  <description>The utils package</description>
  <maintainer email="legopro@todo.todo">legopro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
